fixed collapse images

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -19,6 +19,24 @@
     font-style: normal;
 }
 
+::-webkit-scrollbar {
+    max-height: 10px; 
+    width: 10px;
+    background-color: white;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: var(--scrollbar-clr);
+    border-radius: 0px;
+    cursor: pointer;
+    min-height: 20px;
+}
+
+::-webkit-scrollbar-track {
+    background-color: transparent;
+    margin: 0px 2px; 
+}
+
 input, button, select, textarea, p, .search-container {
     font-family: 'JetBrains Mono', monospace;
 }
@@ -69,16 +87,16 @@ body, html {
     width: 17vw; 
 }
 
+.expand-collapse-right, .expand-collapse-left {
+    position: relative;
+}
+
 .expand-collapse-buttonLeft, .expand-collapse-buttonRight {
     position: absolute;
     top: 50%; 
     transition: transform 0s ease, left 0s ease;
     z-index: 10; 
     cursor: pointer; 
-}
-
-.expand-collapse-buttonLeft, .expand-collapse-buttonRight {
-    z-index: 1;
 }
 
 .expand-collapse-buttonLeft {
@@ -92,10 +110,6 @@ body, html {
 .arrow-icon {
     width: 30px; 
     height: 30px; 
-}
-
-.left-pane {
-    width: 17vw;
 }
 
 .graph-container {
@@ -149,8 +163,8 @@ body, html {
 hr {
     height: 1px; 
     width: 90%; 
-    background: var(--pane-ttle-bg-clr); 
-    border: 1px solid var(--pane-ttle-bg-clr);
+    background: var(--bdr-clr); 
+    border: 1px solid var(--bdr-clr);
     border-radius: 5px;
     margin: -7px auto;
     box-shadow: var(--pane-ttle-bg-clr) 0px 1px 3px 0px;
@@ -263,10 +277,10 @@ title {
     border-radius: 5px;
     background-color: var(--pane-ttle-bg-clr) ;
 }
-
+/* Change the appearance of the vertical thumb */
 .custom-slider input[type="range"]::-webkit-slider-thumb {
     -webkit-appearance: none;
-    background-color: var(--pane-ttle-bg-clr) ;
+    background-color: var(--scrollbar-clr) ;
     width: 12px;
     height: 40px;
     margin-top: -14px;
@@ -281,23 +295,6 @@ title {
     height: 24px;
     border-radius: 5px;
     cursor: pointer;
-}
-
-::-webkit-scrollbar {
-    width: 10px;
-    background-color: white;
-}
-
-::-webkit-scrollbar-thumb {
-    background-color: var(--scrollbar-clr);
-    border-radius: 0px;
-    cursor: pointer;
-    min-height: 20px;
-}
-
-::-webkit-scrollbar-track {
-    background-color: transparent;
-    margin: 0px 2px; 
 }
 
 .button-container {
